<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.jeon.listsample.data.dto.DayWeatherItem" />

        <variable
            name="cityName"
            type="String" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.wheather.WeatherDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="2dp"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@{item.date}"
                android:textColor="?attr/mainTextColor"
                android:textSize="@dimen/header_default_size"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/tv_header_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_title"
                bind:glide="@{item.iconId}"
                tools:ignore="ContentDescription"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_header_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@{cityName}"
                android:textColor="?attr/subTextColor"
                android:textSize="@dimen/header_default_size"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Seoul" />

            <TextView
                android:id="@+id/tv_header_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{item.date}"
                android:textColor="?attr/mainTextColor"
                android:textSize="@dimen/header_default_size"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_city"
                tools:text="The 5/25" />

            <TextView
                android:id="@+id/tv_header_current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{item.max}"
                android:textColor="?attr/mainTextColor"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_date"
                tools:text="24C" />

            <TextView
                android:id="@+id/tv_header_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{item.min}"
                android:textColor="?attr/subTextColor"
                android:textSize="32sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_current_temp"
                tools:text="24C" />

            <TextView
                android:id="@+id/tv_heater_description_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/weather_detail_description"
                android:textColor="?attr/subTextColor"
                android:textSize="20sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_heater_description"
                app:layout_constraintTop_toBottomOf="@id/tv_header_max_temp"
                tools:text="description" />

            <TextView
                android:id="@+id/tv_heater_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.description}"
                android:textColor="?attr/mainTextColor"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/tv_heater_description_str"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_heater_description_str"
                tools:text="clear" />

            <TextView
                android:id="@+id/tv_heater_humitidy_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_line_spacing"
                android:text="@string/weather_detail_humitidy"
                android:textColor="?attr/subTextColor"
                android:textSize="20sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_heater_humitidy"
                app:layout_constraintTop_toBottomOf="@id/tv_heater_description_str"
                tools:text="humitidy" />

            <TextView
                android:id="@+id/tv_heater_humitidy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.humidity}"
                android:textColor="?attr/mainTextColor"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/tv_heater_humitidy_str"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_heater_humitidy_str"
                tools:text="25%" />

            <TextView
                android:id="@+id/tv_heater_pressure_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_line_spacing"
                android:text="@string/weather_detail_pressure"
                android:textColor="?attr/subTextColor"
                android:textSize="20sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_heater_pressure"
                app:layout_constraintTop_toBottomOf="@id/tv_heater_humitidy_str"
                tools:text="pressure" />

            <TextView
                android:id="@+id/tv_heater_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.pressure}"
                android:textColor="?attr/mainTextColor"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/tv_heater_pressure_str"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_heater_pressure_str"
                tools:text="25%" />

            <TextView
                android:id="@+id/tv_heater_wind_speed_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_line_spacing"
                android:text="@string/weather_detail_wind_speed"
                android:textColor="?attr/subTextColor"
                android:textSize="20sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_heater_wind_speed"
                app:layout_constraintTop_toBottomOf="@id/tv_heater_pressure_str"
                tools:text="wind speed" />

            <TextView
                android:id="@+id/tv_heater_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.windSpeed}"
                android:textColor="?attr/mainTextColor"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/tv_heater_wind_speed_str"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_heater_wind_speed_str"
                tools:text="9.4m/s" />

            <TextView
                android:id="@+id/tv_heater_feels_like_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_line_spacing"
                android:text="@string/weather_deatil_feels_like"
                android:textColor="?attr/subTextColor"
                android:textSize="20sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_heater_feels_like"
                app:layout_constraintTop_toBottomOf="@id/tv_heater_wind_speed_str"
                tools:text="feels like" />

            <TextView
                android:id="@+id/tv_heater_feels_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.feelsLike}"
                android:textColor="?attr/mainTextColor"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/tv_heater_feels_like_str"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_heater_feels_like_str"
                tools:text="24c" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>